# etl_folha

./: README.md  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt
script/: notebook.ipynb  script.py
