[tool.poetry]
name = "etl_folha"
version = "0.1.0"
description = "Rotina ETL para uma base de dados de folha de pagamentos. Atividade para a matéria Laboratório de Banco de Dados."
authors = ["Natália Fonseca <nataliabf@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
